# BomberManClient

./: CMakeLists.txt  README.md
docs/protocols/client_msg/: drive-player.json  join-game.json
docs/protocols/server_msg/drive-player/: drive-player.json
docs/protocols/server_msg/join-game/: join-game.json
docs/protocols/server_msg/ticktack-player/: bomb-exploded.json  bomb-setup.json  game-end.json  game-pause.json  game-start.json  game-update.json  player-back-to-playground.json  player-be-isolated.json  player-end-moving.json  player-joined.json  player-pick-spoil.json  player-start-moving.json  player-stop-moving.json
src/core/: animation.h  asset_manager.cpp  asset_manager.h  timer.h
src/effects/: animation.h  movement.cpp  movement.h  timer.h
src/entities/: map_tile.h  player.h  spoil.h
src/entrypoint/: entrypoint.cpp
src/map/: map_manager.cpp  map_manager.h  map_updater.h
src/network/: net_client.cpp  net_client.h  protocol_def.h
src/states/: game_state.cpp  game_state.h  sdl_state.cpp  sdl_state.h
